--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -6,7 +6,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.once.gestionnairecourses.activity.ListeCourseActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:text="Listes de course"
+    android:id="@+id/nomListeCourseTitle"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listViewArticle"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"/>
 
 </RelativeLayout>
