Ajout de l'ajout/modification/suppresion d'un article Ajout de la coloration d'une ligne si la case est cochée

--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -20,7 +20,8 @@
         android:id="@+id/listCourses"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"/>
+        android:layout_marginTop="55dp"
+        android:clickable="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
