--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -21,6 +21,17 @@
         android:id="@+id/listViewArticle"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"/>
+        android:layout_marginTop="55dp"
+        android:clickable="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:src="@mipmap/add_list"
+        android:onClick="addArticleClick"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/listViewArticle"
+        android:layout_alignEnd="@+id/listViewArticle" />
 
 </RelativeLayout>
