--- a/app/src/main/res/layout/article.xml
+++ b/app/src/main/res/layout/article.xml
@@ -29,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/articleSelection"
-            android:checked="false" />
+            android:checked="false"
+            android:focusable="false"/>
 
 
     </LinearLayout>
