--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AccueilActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AccueilActivity"
+    android:background="#fffa7a">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,16 +13,19 @@
         android:text="Gestion des listes de course"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="#FF0000" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listCourses"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:clickable="true" />
+        android:clickable="true"
+        android:divider="#FF0000"
+        android:dividerHeight="1dp"
+        android:layout_below="@+id/addCourseImage"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
