--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -4,7 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.once.gestionnairecourses.activity.ListeCourseActivity">
+    tools:context="com.example.once.gestionnairecourses.activity.ListeCourseActivity"
+    android:background="#fffa7a"
+    android:touchscreenBlocksFocus="true">
 
     <TextView
     android:layout_width="wrap_content"
@@ -12,17 +14,20 @@
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:text="Listes de course"
     android:id="@+id/nomListeCourseTitle"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_centerHorizontal="true"
+        android:background="#FF0000" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewArticle"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_below="@+id/imageButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:divider="#071dff"
+        android:dividerHeight="1dp"/>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -31,7 +36,7 @@
         android:src="@mipmap/add_list"
         android:onClick="addArticleClick"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/listViewArticle"
-        android:layout_alignEnd="@+id/listViewArticle" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
