--- a/app/src/main/res/layout/liste_course.xml
+++ b/app/src/main/res/layout/liste_course.xml
@@ -17,11 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
+            android:textSize="25dp"
             android:id="@+id/nomListe" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
             android:text="New Text"
             android:id="@+id/nombreArticle"
             android:layout_marginLeft="5dp" />
