--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -16,7 +16,7 @@
     android:id="@+id/nomListeCourseTitle"
         android:layout_alignTop="@+id/imageButton"
         android:layout_centerHorizontal="true"
-        android:background="#FF0000" />
+        android:background="#F0C300" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_below="@+id/imageButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:divider="#071dff"
+        android:divider="#F0C300"
         android:dividerHeight="1dp"/>
 
     <ImageButton
