--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -26,7 +26,7 @@
         android:layout_below="@+id/imageButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:divider="#F0C300"
+        android:divider="#FF3333"
         android:dividerHeight="1dp"/>
 
     <ImageButton
