--- a/app/src/main/res/layout/dialog_box_ajout_article.xml
+++ b/app/src/main/res/layout/dialog_box_ajout_article.xml
@@ -26,7 +26,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/quantiteArticleDialog"
         android:text="1" />
