--- a/app/src/main/res/layout/activity_liste_course.xml
+++ b/app/src/main/res/layout/activity_liste_course.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.once.gestionnairecourses.activity.ListeCourseActivity"
-    android:background="#fffa7a"
+    android:background="#F7F5BB"
     android:touchscreenBlocksFocus="true">
 
     <TextView
